--- a/src/zustanme-v-kontaktu.css
+++ b/src/zustanme-v-kontaktu.css
@@ -15,6 +15,8 @@
   background: var(--primary-verylight);
 }
 
+.zustanme-v-kontaktu__links-container {
+}
 .zustanme-v-kontaktu__links-container img {
   padding-right: 16px;
   width: 19px;
